Fixed mobile style in dynamic pages. Map was overlapping navbar.

--- a/src/mdfserver/static/mdfserver/css/mobile_style.css
+++ b/src/mdfserver/static/mdfserver/css/mobile_style.css
@@ -1,6 +1,21 @@
-#page-header
-{
+#page-header  {
 	position: static;
+}
+
+#map-canvas {
+    width: 70%;
+    margin-left: 30%;
+    margin-bottom: 7%;
+    margin-top: 7%;
+}
+
+/*I swear, this is absolutely necessary to centralize google maps*/
+#map-canvas>div:nth-child(1)>div:nth-child(1)>div:nth-child(1)[style] {
+    left: -22% !important;
+}
+
+#st_select {
+    margin-top: -6%;
 }
 
 #big_image {
